# Lima-camera-dexela

./: CMakeLists.txt  README.md
cmake/: FindDexela.cmake  FindGLIB2.cmake
conda/camera/: meta.yaml
conda/tango/: meta.yaml
config/: sensor2923.fmt
doc/: index.rst  tango.rst
include/: DexelaBinCtrlObj.h  DexelaCompatibility.h  DexelaDetInfoCtrlObj.h  DexelaInterface.h  DexelaReconstructionCtrlObj.h  DexelaSyncCtrlObj.h
python/: Dexela.py  __init__.py
sdk/include/: NativeApi.h
sdk/x64/: BadPixelCorrection.lib  NativeApi.lib
sdk/x86/: BadPixelCorrection.lib  NativeApi.lib
sip/: DexelaInterface.sip
src/: DexelaBinCtrlObj.cpp  DexelaConfig.cfg  DexelaDetInfoCtrlObj.cpp  DexelaInterface.cpp  DexelaReconstructionCtrlObj.cpp  DexelaSyncCtrlObj.cpp  Makefile
tango/: CMakeLists.txt  Dexela.py
